--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <header class="topbar">
     <div class="brand">
       <img src="assets/logo_kanto.jpeg" class="logo" alt="Kanto Nerd" />
-      <div><h1>Kanto Nerd</h1><small>Jogo da Memória — Campeonato local</small></div>
+      <div>
+        <h1>Kanto Nerd</h1>
+        <small>Jogo da Memória — Campeonato local</small>
+      </div>
     </div>
     <div class="controls">
       <button id="start" class="btn primary">Iniciar jogo</button>
@@ -48,7 +51,9 @@
       <h2>🏆 Ranking — Top 20</h2>
       <table>
         <thead>
-          <tr><th>#</th><th>Nome</th><th>Pontuação</th><th>Tempo</th><th>Mov</th><th>Dificuldade</th><th>Data</th></tr>
+          <tr>
+            <th>#</th><th>Nome</th><th>Pontuação</th><th>Tempo</th><th>Mov</th><th>Dificuldade</th><th>Data</th>
+          </tr>
         </thead>
         <tbody id="lbBody"></tbody>
       </table>
@@ -65,10 +70,13 @@
     </section>
   </main>
 
-  <footer class="footer">Imagens em <code>assets/icons</code>. Verso usa <code>assets/logo_kanto.jpeg</code>.</footer>
+  <!-- Rodapé mantido sem mensagem de caminhos de imagem -->
+  <footer class="footer"></footer>
+
   <script src="game.js"></script>
+
   <div class="signature" aria-label="Assinatura do autor">
-  <span>Criado por <b>Richard Alex</b> — <code>@richard.gms</code></span>
-</div>
+    <span>Criado por <b>Richard Alex</b> — <code>@richard.gms</code></span>
+  </div>
 </body>
 </html>
